diesel watch new generation=100$=8=http://www.ebay.com/bhp/diesel-watch
diesel watch v1=250$=9=http://www.ebay.com/sch/Diesel-Watches/14324/bn_2188940/i.html
diesel watch for woman=500$=10=http://stores.ebay.com/Jomashop/Diesel-Watches-/_i.html?_fsub1839480012